k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kamailio
  labels:
    name: kamailio
    app: sip-server
