k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kamailio-loadbalancer
  namespace: kamailio
spec:
  type: LoadBalancer
  selector:
    app: kamailio
  ports:
    - name: sip-udp
      protocol: UDP
      port: 5060
      targetPort: 5060
    - name: sip-tcp
      protocol: TCP
      port: 5060
      targetPort: 5060
